# Fluidkit

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  __init__.py  debug.py  docker-compose.dev.yml  docker-compose.yml  docker-run.bat  docker-run.sh  pyproject.toml  test-docker.py  test.py  test_files.py
core/: ast_utils.py  constants.py  integrator.py  models.py  nodes.py  schema.py  type_conversion.py  utils.py
docs/: auto-discovery.md  configuration.md  fullstack.md  streaming.md  types.md
examples/: import_cases.py  test_model.py  test_model.ts
examples/sample/: import_test.py  model_test.py  route_test.py
examples/test_project/: main.py  main.ts  models.py  models.ts  test.ts
examples/test_project/.fluidkit/: fluidkit.ts
examples/test_project/shared/: auth.py
fluidkit/: __init__.py
fluidkit/core/: __init__.py  autodiscovery.py  config.py  constants.py  integrator.py  schema.py  type_conversion.py  utils.py
fluidkit/generators/typescript/: clients.py  imports.py  interfaces.py  pipeline.py
fluidkit/introspection/: models.py  parameters.py  routes.py  security.py
generators/: __init__.py  fetch_wrapper_generator.py  import_generator.py  interface_generator.py  pipeline.py
generators/typescript/: __init__.py  clients.py  imports.py  interfaces.py  pipeline.py  runtime.ts
introspection/: __init__.py  models.py  parameters.py  routes.py  security.py
parsers/: pydantic_parser.py
tests/: app.py  schema.py  test_core.py  test_generators.py  test_integration.py  test_introspection.py
tests/sample/: app.py  app.ts  orders.py  orders.server.py  orders.server.ts  users.api.py  users.api.ts
transformers/: discovery_transformer.py  resolution_transformer.py  validation_transformer.py
(+17 files in other folders)
