[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluidkit"
version = "0.2.2"
description = "Automatic TypeScript client generation for FastAPI through runtime introspection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Aswanth Manoj", email = "aswanthmanoj51@gmail.com"},
]
keywords = ["fastapi", "typescript", "code-generation", "full-stack", "type-safety", "sveltekit", "nextjs", "nuxtjs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "fastapi[standard]>=0.115.14",
    "pydantic-extra-types>=2.10.5",
    "pydantic[email]>=2.11.7",
]

[project.urls]
Homepage = "https://github.com/AswanthManoj/Fluidkit"
Repository = "https://github.com/AswanthManoj/Fluidkit"
Issues = "https://github.com/AswanthManoj/Fluidkit/issues"
Documentation = "https://github.com/AswanthManoj/Fluidkit#readme"

[tool.setuptools.packages.find]
include = ["fluidkit*"]

[tool.setuptools.package-data]
fluidkit = ["templates/**/*", "runtimes/**/*.ts", "runtimes/**/*.js", "runtimes/**/*.py"]
